# realtimeSDK

./: .gitignore  README.md  copy_minimal_commands.sh  pyproject.toml  setup.ps1  setup.sh
realtime_hairbrush/: __init__.py  commands.yaml  settings.yaml
realtime_hairbrush/cli/: __init__.py  main.py
realtime_hairbrush/cli/commands/: config.py  connect.py  manual.py  sequence.py  stroke.py
realtime_hairbrush/cli/utils/: __init__.py  command_parser.py  formatting.py  (+2 more)
realtime_hairbrush/config/: __init__.py  default_config.json  manager.py  settings.py
realtime_hairbrush/execution/: __init__.py  engine.py  timing.py  tool_manager.py  validator.py
realtime_hairbrush/instructions/: __init__.py  airbrush_instruction.py
realtime_hairbrush/runtime/: __init__.py  dispatcher.py  events.py  object_model.py  object_model_agent.py  queue.py  readers.py  state.py
realtime_hairbrush/transport/: __init__.py  airbrush_transport.py  config.py  logging_wrapper.py
realtime_hairbrush/ui/: textual_app.py
semantic_gcode/: __init__.py  sd_card.py
semantic_gcode/config/: __init__.py  alias.py  component.py  composite.py  controller.py  interviewer.py  parser.py  profile.py
semantic_gcode/controller/: __init__.py  device.py
semantic_gcode/dict/: GCode_dictionary.md  split.py
semantic_gcode/gcode/: __init__.py  base.py  fan.py  mixins.py  motion.py  network.py  system.py  temperature.py  tool.py
semantic_gcode/session/: config_session.py
semantic_gcode/state/: __init__.py  domains.py  manager.py
semantic_gcode/transport/: __init__.py  base.py  http.py  serial.py
semantic_gcode/utils/: __init__.py  config_tool.py  duet_cli.py  duet_config.py  exceptions.py  platform.py  port_selection.py
tests/: test_sequencer_polling.py
(+578 files in other folders)
