[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic_gcode"
version = "0.1.0"
description = "A device-independent, real-time control SDK for G-code machines"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "requests>=2.28.0",  # For HTTP transport
    "pyserial>=3.5",     # For serial transport
    "typing-extensions>=4.0.0",  # For Python 3.8 compatibility
    "pytest>=7.0.0",     # For testing
    "pyyaml>=6.0",       # For configuration files
    "click>=8.1.0",      # For CLI interface
    "dataclasses>=0.8",  # For structured data classes
    "setuptools>=42.0.0",  # For pkg_resources
    "prompt_toolkit>=3.0.0",  # For cross-platform interactive shell
    "rich>=13.0.0",      # For rich text rendering in TUI
    "textual>=0.44.0",   # For Textual-based TUI (async, cross-platform)
    "aiohttp>=3.9.0",    # For async HTTP transport
    "pyserial-asyncio>=0.6",  # For async Serial transport
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "pytest-mock>=3.10.0",  # For better mocking in tests
]

[tool.hatch.build.targets.wheel]
packages = ["semantic_gcode", "realtime_hairbrush"]

[project.scripts]
airbrush = "realtime_hairbrush.cli.main:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
